fix(cover): gap between title elements

--- a/styles/style.css
+++ b/styles/style.css
@@ -92,7 +92,7 @@
   padding: 8px 50px 0;
   display: flex;
   flex-direction: column;
-  gap: 18px;
+  gap: 22px;
   line-height: 1;
   font-size: 100px;
   font-weight: 700;
